Fix login input so text is visible

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -766,7 +766,7 @@ body.login-page .login-form .login-body {
 body.login-page .login-form input {
     margin-bottom: 0.8em;
     margin-top: 0.5em;
-    padding: 1.2em 1em;
+    padding: 0.2em 1em;
     font-size: 1.1em;
     border-radius: 1px;
 }
